--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+===================================================================
+== lovingly brought to you by... ==================================
+===================================================================
+ ______     __  __     __  __    ______     ______     __  __      
+/\  ___\   /\ \/\ \   /\ \_\ \  /\  __ \   /\  ___\   /\ \_\ \     
+\ \___  \  \ \ \_\ \  \ \__  _\ \ \ \_\ \  \ \___  \  \ \  __ \    
+ \/\_____\  \ \_____\  \/_/\_\   \ \ \ \ \  \/\_____\  \ \_\ \_\   
+  \/_____/   \/_____/     \/_/    \/_/ /_/   \/_____/   \/_/\/_/   
+                                                                   
+===================================================================
+========================================= http://suyash.hol.es/ ===
+===================================================================
+-->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Suyash Bansal</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="Hii.. I am Suyash Bansal. Welcome to my website :)" />
+		<meta name="keywords" content="suyash, bansal, suyashbansal, web-designer, computer, expert" />
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-wide.css" />
+			<link rel="stylesheet" href="css/style-noscript.css" />
+		</noscript>
+		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Suyash Bansal</h1>
+						<p>Computer Programmer &nbsp;&bull;&nbsp; Gaming Addict &nbsp;&bull;&nbsp; Never asked for this</p>
+						<nav>
+							<ul>
+								<li><a href="https://www.twitter.com/suyashbansal" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/suyashbansal26" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+								<li><a href="https://plus.google.com/+SuyashBansal" class="icon fa-google-plus" target="_blank"><span class="label">Google+</span></a></li>
+								<li><a href="https://www.github.com/suyashbansal" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
+								<li><a href="mailto:suyash.bansal5@gmail.com" class="icon fa-envelope-o" target="_blank"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright">&copy; Suyash Bansal. Design: <a href="http://themaniactrinity.blogspot.com" target="_blank">The Maniac Trinity</a>.</span>
+					</footer>
+				
+			</div>
+		</div>
+	</body>
 </html>
