--- a/concierge-stg.html
+++ b/concierge-stg.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="h-full bg-white">
+<html class="h-full bg-sky-50">
 
 <head>
     <title>Concierge DEVELOP Env</title>
@@ -12,7 +12,7 @@
 
     <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+            <img class="mx-auto h-10 w-auto" src="https://upload.wikimedia.org/wikipedia/commons/8/83/Liveswitch-logotype-blue.svg"
                 alt="Your Company">
             <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to STG
                 account</h2>
