--- a/concierge-dev.html
+++ b/concierge-dev.html
@@ -12,7 +12,7 @@
 
     <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=pink&shade=600"
+            <img class="mx-auto h-10 w-auto" src="https://upload.wikimedia.org/wikipedia/commons/8/83/Liveswitch-logotype-blue.svg"
                 alt="Your Company">
             <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to DEV
                 account</h2>
