Added script to detect old browsers

--- a/concierge-stg.html
+++ b/concierge-stg.html
@@ -57,6 +57,16 @@
     </div>
     <script type="module" src="https://ls-concierge-beacon-staging.herokuapp.com/bubble.js" defer></script>
     <script>window.liveSwitchConciergeCodeName = 'temporary_herring_amaranth';</script>
+    <script> 
+        var $buoop = {required:{e:-2,f:-2,o:-2,s:-1,c:-3},insecure:true,unsupported:true,api:2024.06 }; 
+        function $buo_f(){ 
+         var e = document.createElement("script"); 
+         e.src = "//browser-update.org/update.min.js"; 
+         document.body.appendChild(e);
+        };
+        try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+        catch(e){window.attachEvent("onload", $buo_f)}
+    </script>
 </body>
 
 </html>
