--- a/concierge-stg-old.html
+++ b/concierge-stg-old.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="h-full bg-sky-50">
+<html class="h-full bg-yellow-100">
 
 <head>
     <title>Concierge STG (Old Beacon)</title>
