--- a/concierge-stg.html
+++ b/concierge-stg.html
@@ -1,72 +1,131 @@
 <!doctype html>
-<html class="h-full bg-sky-50">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Beacon (Staging) - LiveSwitch</title>
+    <!-- Tailwind CSS CDN -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+  </head>
+  <body class="bg-gray-100 text-gray-800">
+    <div class="container mx-auto p-6">
+      <!-- Header -->
+      <header class="mb-8 text-center">
+        <h1 class="text-3xl font-bold mb-2">Beacon (Staging) - LiveSwitch</h1>
+        <p class="text-lg text-gray-600 font-semibold">New script tag</p>
+        <p>Add <code class="bg-gray-200 p-1 rounded text-s font-mono">?codename=your_website_code</code> to the URL if you want use your own bell.</p>
+      </header>
 
-<head>
-    <title>Concierge DEVELOP Env</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
-</head>
-
-<body class="h-full">
-
-    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-        <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <img class="mx-auto h-10 w-auto" src="https://upload.wikimedia.org/wikipedia/commons/8/83/Liveswitch-logotype-blue.svg"
-                alt="Your Company">
-            <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Sign in to STG
-                account</h2>
+      <!-- Page Errors Section -->
+      <section class="mb-10 bg-white shadow-md rounded p-6">
+        <h2 class="text-2xl font-semibold mb-4 border-b pb-2">Page Errors to Test</h2>
+        <div class="space-y-4">
+          <button onclick="callMyButtonClickFn" class="w-full md:w-auto bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded shadow">
+            Script Error
+          </button>
+          <button onclick="failedScriptError()" class="w-full md:w-auto bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded shadow">
+            Script Error 2
+          </button>
+          <button onclick="failedScriptError2()" class="w-full md:w-auto bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded shadow">
+            Script Error 3
+          </button>
+          <button onclick="failedRequest()" class="w-full md:w-auto bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded shadow">
+            Request Error
+          </button>
         </div>
+      </section>
 
-        <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-            <form class="space-y-6" action="#" method="POST">
-                <div>
-                    <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
-                    <div class="mt-2">
-                        <input id="email" name="email" type="email" autocomplete="email" required
-                            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    </div>
-                </div>
-
-                <div>
-                    <div class="flex items-center justify-between">
-                        <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
-                        <div class="text-sm">
-                            <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
-                        </div>
-                    </div>
-                    <div class="mt-2">
-                        <input id="password" name="password" type="password" autocomplete="current-password" required
-                            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                    </div>
-                </div>
-
-                <div>
-                    <button type="submit"
-                        class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign
-                        in</button>
-                </div>
-            </form>
-
-            <p class="mt-10 text-center text-sm text-gray-500">
-                Website code:
-                <code
-                    class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">temporary_herring_amaranth</code>
-            </p>
+      <!-- Advanced Mode Section -->
+      <section class="mb-10 bg-white shadow-md rounded p-6">
+        <h2 class="text-2xl font-semibold mb-4 border-b pb-2">Advanced Mode Test</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <button onclick="advancedCallMode(1)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call No Info
+          </button>
+          <button onclick="advancedCallMode(2)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call Left (no info)
+          </button>
+          <button onclick="advancedCallMode(3)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call Email (only)
+          </button>
+          <button onclick="advancedCallMode(4)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call Email + Name
+          </button>
+          <button onclick="advancedCallMode(5)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call Valid Phone + Name
+          </button>
+          <button onclick="advancedCallMode(6)" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded shadow">
+            Start Call Invalid Phone + Name
+          </button>
         </div>
+      </section>
+
+      <!-- Random Tests Section -->
+      <section class="mb-10 bg-white shadow-md rounded p-6">
+        <h2 class="text-2xl font-semibold mb-4 border-b pb-2">Random Tests</h2>
+        <div class="space-y-4">
+          <a id="dynamic-link" href="#" class="block text-blue-500 hover:underline">
+            Navigate to same page
+          </a>
+          <button id="dynamic-button" class="w-full md:w-auto bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded shadow">
+            Button Navigate to same page
+          </button>
+          <button onclick="window.location.reload()" class="w-full md:w-auto bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded shadow">
+            Refresh Page
+          </button>
+        </div>
+      </section>
     </div>
-    <script type="module" src="https://ls-concierge-beacon-staging.herokuapp.com/bubble.js" defer></script>
-    <script>window.liveSwitchConciergeCodeName = 'temporary_herring_amaranth';</script>
-    <script> 
-        var $buoop = {required:{e:-2,f:-2,o:-2,s:-1,c:-3},insecure:true,unsupported:true,api:2024.06 }; 
-        function $buo_f(){ 
-         var e = document.createElement("script"); 
-         e.src = "//browser-update.org/update.min.js"; 
-         document.body.appendChild(e);
-        };
-        try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
-        catch(e){window.attachEvent("onload", $buo_f)}
-    </script>
-</body>
 
+    <!-- Inline Scripts -->
+    <script type="module" src="https://beacon.concierge.staging.liveswitch.com/bubble.js" defer></script>
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const codename = urlParams.get('codename') ?? 'temporary_herring_amaranth';
+      window.liveSwitchConciergeCodeName = codename;
+    </script>
+    <script type="text/javascript">
+      const failedRequest = async () => {
+        await fetch('https://sdfa934masdf92q4.sdafasf934madfasdfm.com');
+      }
+      const failedScriptError = () => {
+        doFailSomeWay();
+      }
+      const failedScriptError2 = () => {
+        throw new Error("Thrown Error Test");
+      }
+      const advancedCallMode = (situation) => {
+        const urlParams = new URLSearchParams(window.location.search);
+        const codename = urlParams.get('codename') ?? 'exmaple-site';
+        if (situation === 1) {
+          liveSwitchConcierge.startConversation(codename);
+        } else if (situation === 2) {
+          liveSwitchConcierge.startConversation(codename, { position: 'left' });
+        } else if (situation === 3) {
+          liveSwitchConcierge.startConversation(codename, { position: 'right' }, { emailAddress: 'jake.steele@liveswitch.com' });
+        } else if (situation === 4) {
+          liveSwitchConcierge.startConversation(codename, { position: 'right' }, { emailAddress: 'jake.steele@liveswitch.com', firstName: 'Jake', lastName: 'Steele' });
+        } else if (situation === 5) {
+          liveSwitchConcierge.startConversation(codename, { position: 'right' }, { phoneNumber: '+1 778-836-5573', firstName: 'Jake', lastName: 'Steele' });
+        } else if (situation === 6) {
+          liveSwitchConcierge.startConversation(codename, { position: 'right' }, { phoneNumber: '8-836-5573', firstName: 'Jake', lastName: 'Steele' });
+        }
+      }
+    </script>
+    <script>
+      // Function to get the current URL with query parameters
+      function getCurrentUrl() {
+        return window.location.href;
+      }
+
+      // Set the href of the link to the current URL
+      document.getElementById('dynamic-link').href = getCurrentUrl();
+
+      // Add a click event listener to the button
+      document.getElementById('dynamic-button').addEventListener('click', function() {
+        window.location.href = getCurrentUrl();
+      });
+    </script>
+  </body>
 </html>
